Project

General

Profile

Actions

Bug #7064

closed

super from at_exit will segv

Bug #7064: super from at_exit will segv

Added by tenderlovemaking (Aaron Patterson) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0dev (2012-09-13 trunk 36956) [x86_64-darwin12.1.0]
Backport:
[ruby-core:47679]

Description

Calling super inside at_exit will segv. For example:

$ ruby -e'at_exit { super }'

I'm not sure what super should do inside the at_exit block, but it probably shouldn't segv.

Updated by Eregon (Benoit Daloze) over 13 years ago Actions #1 [ruby-core:47680]

This did not happen with ruby 2.0.0dev (2012-07-15 trunk 36395) [x86_64-darwin10.8.0].

Updated by nobu (Nobuyoshi Nakada) over 13 years ago Actions #2

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r37030.
Aaron, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


insns.def: super from at_exit

Actions

Also available in: PDF Atom